[gd_scene load_steps=6 format=3 uid="uid://x43meoaw6fqd"]

[ext_resource type="Script" uid="uid://c2d3c7x6eoga3" path="res://EXP (Experimental Stuff)/EXP Scenes/UI/story_3.gd" id="1_bq3no"]
[ext_resource type="Texture2D" uid="uid://rsem37ik3pku" path="res://Assets/UI Pictures/FlippingPages.png" id="2_qhmuj"]
[ext_resource type="AudioStream" uid="uid://d3ty5pr3nyqfn" path="res://Assets/Sounds/flipping_pages.mp3" id="3_py85t"]
[ext_resource type="Theme" uid="uid://d10kavfvudbv2" path="res://Themes/story.tres" id="4_807ba"]
[ext_resource type="AudioStream" uid="uid://cprll4a2dkya8" path="res://Assets/Sounds/story_fin.mp3" id="5_vy7i8"]

[node name="Story" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bq3no")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.713726)

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qhmuj")
expand_mode = 3
stretch_mode = 3

[node name="FlippingPages" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_py85t")

[node name="BookContent" type="Control" parent="."]
anchors_preset = 0
offset_left = 90.0
offset_top = 42.0
offset_right = 1061.0
offset_bottom = 621.0

[node name="1" type="Control" parent="BookContent"]
anchors_preset = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 952.0
offset_bottom = 607.0

[node name="RichTextLabel" type="RichTextLabel" parent="BookContent/1"]
layout_mode = 0
offset_left = 28.0
offset_right = 459.0
offset_bottom = 597.0
theme = ExtResource("4_807ba")
bbcode_enabled = true
text = "Le dragon, blessé, s'enfuit,

Et les princesses sont réunies.

Réfléchis à ce que tu as appris,

En les aidant aujourd'hui."

[node name="RichTextLabel2" type="RichTextLabel" parent="BookContent/1"]
layout_mode = 0
offset_left = 508.0
offset_top = 225.0
offset_right = 915.0
offset_bottom = 597.0
theme = ExtResource("4_807ba")
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "[center]Fin[/center]"

[node name="Control" type="Control" parent="BookContent/1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -725.0
offset_bottom = 595.0
grow_horizontal = 0

[node name="StoryAudio1" type="AudioStreamPlayer" parent="BookContent/1"]
stream = ExtResource("5_vy7i8")
volume_db = 20.0
autoplay = true

[node name="Flip" type="Control" parent="BookContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 567.0
offset_right = -17.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BookContent/Flip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftFLip" type="Button" parent="BookContent/Flip/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_807ba")
text = "Page précédente"

[node name="Margin" type="Control" parent="BookContent/Flip/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="RightFlip" type="Button" parent="BookContent/Flip/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_807ba")
text = "Page suivante"

[node name="Back" type="Button" parent="BookContent/Flip/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_807ba")
text = "Retour au menu"

[connection signal="finished" from="BookContent/1/StoryAudio1" to="." method="_on_story_audio_1_finished"]
[connection signal="pressed" from="BookContent/Flip/HBoxContainer/LeftFLip" to="." method="_on_left_f_lip_pressed"]
[connection signal="pressed" from="BookContent/Flip/HBoxContainer/RightFlip" to="." method="_on_right_flip_pressed"]
[connection signal="pressed" from="BookContent/Flip/HBoxContainer/Back" to="." method="_on_back_pressed"]
